tests/negative/Test15.sp
(* Expression wrong type *)
abs:Int = 4.0*3;